...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="EiF-IR-THc" id="4BM-NC-dTP"/>
                            <outlet property="delegate" destination="EiF-IR-THc" id="CB0-x9-VCJ"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Food Purchases" id="JpH-jE-23H">
                        <barButtonItem key="rightBarButtonItem" title="Add" id="4v8-ke-9KX">
                            <color key="tintColor" systemColor="systemBlueColor"/>
                            <connections>
                                <action selector="addButton:" destination="EiF-IR-THc" id="bw2-aF-MpA"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
            <objects>
                <viewController id="rLK-8P-qv1" customClass="FoodInfoViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="VPV-DZ-5uz">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter item to search for..." textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="3NR-v5-WGp">
                                <rect key="frame" x="30" y="176" width="354" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter item cost:" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="tgz-hg-8Gf">
                                <rect key="frame" x="30" y="239" width="125" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7YO-Wk-rJ2">
                                <rect key="frame" x="154" y="326" width="107" height="41"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                <state key="normal" title="Add Item"/>
                                <connections>
                                    <action selector="buttonPressed:" destination="rLK-8P-qv1" eventType="touchUpInside" id="M44-HL-Qg0"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="z4U-kS-lgd"/>
...
                            <constraint firstItem="z4U-kS-lgd" firstAttribute="trailing" secondItem="3NR-v5-WGp" secondAttribute="trailing" constant="30" id="Eew-sg-nt6"/>
                            <constraint firstItem="3NR-v5-WGp" firstAttribute="top" secondItem="z4U-kS-lgd" secondAttribute="top" constant="88" id="bNM-oa-io1"/>
                            <constraint firstItem="3NR-v5-WGp" firstAttribute="leading" secondItem="z4U-kS-lgd" secondAttribute="leading" constant="30" id="m1I-D6-uDf"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Add Item" id="fJl-Cd-yif">
                        <barButtonItem key="rightBarButtonItem" title="Info" id="coF-wz-AbJ">
                            <connections>
                                <segue destination="D12-Ui-zzd" kind="show" id="eLM-gm-idE"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
