...
        tableView.reloadData()
    }
    
    @IBAction func addButton(_ sender: Any) {
        selectedButton = addBtnPressed
        //addTransparentView(frames: addBtnPressed.accessibilityFrame)
        let alert = UIAlertController(title: "Enter store name", message: "", preferredStyle: UIAlertController.Style.alert)
        alert.addAction(UIAlertAction(title: "Groceries", style: UIAlertAction.Style.default){ _ in
            let textField = alert.textFields![0] as UITextField
            self.storeName = textField.text ?? "Name"
            self.theModel.addPurchase(storeName: self.storeName, purchaseType: "Groceries")
            self.fetchItems()
        })
        alert.addAction(UIAlertAction(title: "Restaurant", style: UIAlertAction.Style.default){ _ in
...
